--- a/rdf-forge/rdf-forge-ui/src/app/features/job/job-list/job-list.html
+++ b/rdf-forge/rdf-forge-ui/src/app/features/job/job-list/job-list.html
@@ -407,7 +407,7 @@
                   <mat-option [value]="pipeline.id">
                     <div class="pipeline-option">
                       <span class="pipeline-option-name">{{ pipeline.name }}</span>
-                      <span class="pipeline-option-version">v{{ pipeline.version }}</span>
+                      <span class="pipeline-option-version">{{ pipeline.status }}</span>
                     </div>
                   </mat-option>
                 }
